<resources>
    <string name="app_name">TaskApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_task">Add your task</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="sign_up">Sign-up to add your tasks</string>
    <string name="sign_in">Sign-in to continue</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="address">Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="welcome">WELCOME,</string>
    <string name="welcome_back">WELCOME BACK USER,</string>
    <string name="already_a_user_click_here_to_login">Already a user? Click here to Login</string>
    <string name="new_user_signup_here">New User? Signup here</string>
    <string name="localData">LocalData</string>
    <string name="your_tasks">Your Tasks</string>
    <string name="add">+ Add</string>
</resources>